sidebar mock-up UI done

--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.1",
         "animate.css": "^4.1.0",
-        "bulma-calendar": "^6.0.7",
         "bulma-extensions": "^6.2.7",
+        "chart.js": "^2.9.3",
         "vue": "^2.6.11",
+        "vue-chartjs": "^3.5.0",
         "vue-clickaway": "^2.2.2",
         "vue-router": "^3.3.4"
     }
