--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vue": "^2.6.11",
         "vue-chartjs": "^3.5.0",
         "vue-clickaway": "^2.2.2",
-        "vue-router": "^3.3.4"
+        "vue-router": "^3.3.4",
+        "vuelidate": "^0.7.5"
     }
 }
