--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.1",
+        "@tinymce/tinymce-vue": "^3.2.2",
         "animate.css": "^4.1.0",
         "bulma-extensions": "^6.2.7",
         "bulma-o-steps": "^1.0.9",
         "chart.js": "^2.9.3",
+        "tinymce": "^5.4.1",
         "vue": "^2.6.11",
         "vue-chartjs": "^3.5.0",
         "vue-clickaway": "^2.2.2",
