Set up app to use vuex store

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.19.2",
         "bulma": "^0.9.0",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.1",
@@ -29,9 +29,11 @@
         "chart.js": "^2.9.3",
         "tinymce": "^5.4.1",
         "vue": "^2.6.11",
+        "vue-axios": "^2.1.5",
         "vue-chartjs": "^3.5.0",
         "vue-clickaway": "^2.2.2",
         "vue-router": "^3.3.4",
-        "vuelidate": "^0.7.5"
+        "vuelidate": "^0.7.5",
+        "vuex": "^3.5.1"
     }
 }
