--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/nexmo-notification-channel": "^2.3",
+        "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0"
     },
     "require-dev": {
