--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     },
     "devDependencies": {
         "axios": "^0.19.2",
+        "bootstrap": "^4.0.0",
         "bulma": "^0.9.0",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.13",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
