--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME= Bellewisefoods
 APP_ENV = local
 APP_KEY =
-APP_DEBUG = false
+APP_DEBUG = true
 APP_URL = admin.bellewisefoods.com
 
 LOG_CHANNEL=stack
