Set sanctum domain

--- a/.env
+++ b/.env
@@ -50,7 +50,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 NEXMO_KEY=e1ee698d
 NEXMO_SECRET=3vsIsgixcRp5bmRM
 
-SANCTUM_STATEFUL_DOMAINS=
+SANCTUM_STATEFUL_DOMAINS=phplaravel-488250-1542890.cloudwaysapps.com
 
 
 
