--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=
-APP_ENV =local
+APP_NAME=Bellewisefoods
+APP_ENV =production
 APP_KEY =base64:zxaQcK9yKYZ82tLtRGgjxJ7OK9ym8IKQPpTPuXEzNjQ=
-APP_DEBUG=true
-APP_URL=
+APP_DEBUG=false
+APP_URL=admin.bellewisefoods.com
 
 LOG_CHANNEL=stack
 
@@ -27,7 +27,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=bellewiselogistics@gmail.com
-MAIL_PASSWORD=bellewise.admin
+MAIL_PASSWORD=galzzaqveuesjjwj
 MAIL_ENCRYPTION=tls
 MAIL_FROM_NAME="${APP_NAME}"
 
@@ -50,7 +50,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 NEXMO_KEY=e1ee698d
 NEXMO_SECRET=3vsIsgixcRp5bmRM
 
-SANCTUM_STATEFUL_DOMAINS=phplaravel-488250-1542890.cloudwaysapps.com
+SANCTUM_STATEFUL_DOMAINS=admin.bellewisefoods.com
 
 
 
