--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Bellewisefoods
-APP_ENV =local
-APP_KEY = 
-APP_DEBUG=true
+APP_ENV =production
+APP_KEY = base64:zxaQcK9yKYZ82tLtRGgjxJ7OK9ym8IKQPpTPuXEzNjQ=	
+APP_DEBUG=false
 APP_URL=admin.bellewisefoods.com
 
 LOG_CHANNEL=stack
