--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=134.122.98.59
 DB_PORT=3306
-DB_DATABASE=ntsmztezbu
-DB_USERNAME=ntsmztezbu
-DB_PASSWORD=rnAmXqZnD6
+DB_DATABASE=rhahtpqugh
+DB_USERNAME=rhahtpqugh
+DB_PASSWORD=nWH2M7HN5C
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
