--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
 
-APP_NAME=Bellewisefoods
-APP_ENV=production
-APP_KEY=base64:Ebdt01DsKriMPCgcHBY2qfXAcTDEY1xrwEcHEj3fOEE=
-APP_DEBUG=false
-APP_URL=admin.bellewisefoods.com
+APP_NAME=Laravel
+APP_ENV=local
+APP_KEY=base64:DE44iNH5rS0tJ+rri9QoKQKATkr1/fYaEmLdeU89ms0=
+APP_DEBUG=true
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=134.122.98.59
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=rhahtpqugh
-DB_USERNAME=rhahtpqugh
-DB_PASSWORD=nWH2M7HN5C
+DB_DATABASE=bellewise_admin
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -25,11 +25,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=bellewiselogistics@gmail.com
-MAIL_PASSWORD=bellewise.admin
-MAIL_ENCRYPTION=tls
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -47,6 +48,3 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 NEXMO_KEY = e1ee698d
 NEXMO_SECRET = 3vsIsgixcRp5bmRM
-
-SANCTUM_STATEFUL_DOMAINS=admin.bellewisefoods.com
-
