Set app to server enironment

--- a/.env.example
+++ b/.env.example
@@ -139,7 +139,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 APP_NAME=Bellewisefoods
 APP_ENV=production
 APP_KEY=base64:Ebdt01DsKriMPCgcHBY2qfXAcTDEY1xrwEcHEj3fOEE=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=admin.bellewisefoods.com
 
 LOG_CHANNEL=stack
